[package]
name = "esp32-epaper-calendar"
version = "0.1.0"
edition = "2024"

[features]
default = ["isdayoff"]
isdayoff = ["dep:reqwless"]

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.23.0", features = [
    "esp32s3",
    "unstable",
] }
esp-println = { version = "0.13.0", default-features=false, features = ["esp32s3", "log", "jtag-serial", "colors", "critical-section"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "dhcpv4-hostname", "dns"] }

esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32s3",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "proto-dns"
] }
embassy-executor = { version = "0.7.0" }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.1"
embedded-hal-bus = "0.3.0"
weact-studio-epd = "0.1.2"
display-interface-spi = "0.5.0"
profont = "0.7.0"
ds323x = "0.6.0"
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.19", default-features = false }
embedded-nal = "0.9.0"
reqwless = { version = "0.13.0", features = ["log"], optional = true }
sntpc = { version = "0.5.2", default-features = false, features = ["embassy-socket", "log"] }
chrono-tz = { version = "0.10.1", default-features = false }
paste = "1.0.15"
arrayvec = { version = "0.7.6", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
