[package]
name = "esp32-epaper-calendar"
version = "0.1.0"
edition = "2024"

[features]
default = ["isdayoff"]
isdayoff = ["dep:reqwless"]

[dependencies]
esp-hal = { version = "0.23.0", features = [
    "esp32s3",
    "unstable",
] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32s3"] }
esp-println = { version = "0.13.0", default-features=false, features = ["esp32s3", "log", "jtag-serial", "colors", "critical-section"] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
]}
esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32s3",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }

embassy-executor = { version = "0.7.0" }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.1"
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "dhcpv4-hostname", "dns"] }

smoltcp = { version = "0.12.0", default-features = false, features = [
    "proto-dns"
] }

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-hal-bus = "0.3.0"
embedded-nal = "0.9.0"

embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
profont = "0.7.0"

ds323x = "0.6.0"
weact-studio-epd = "0.1.2"

reqwless = { version = "0.13.0", features = ["log"], optional = true }
sntpc = { version = "0.5.2", default-features = false, features = ["embassy-socket", "log"] }

chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10.1", default-features = false }

num-traits = { version = "0.2.19", default-features = false }
paste = "1.0.15"
static_cell      = { version = "2.1.0",  features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
